# project-euler-100

./: .gitignore  Cargo.toml  README.md
src/snippet/: divisors.rs
