[package]
name = "euler"
version = "0.1.0"
authors = ["elbaro <elbaro@github>"]

[dependencies]
rayon = "*"
primal = "*"
indoc = "*"
ramp = "*"
num = "*"
num-bigint = "*"
num-traits = "*"
lazy_static = "*"
chrono = "*"
time = "*"
rand = "0.5.5"
reqwest = "*"
itertools = "*"
permutohedron = "*"
panic-context = "*"
sliding_windows = "*"
ordered-float = "*"
