[package]
name = "euler"
version = "0.1.0"
authors = ["elbaro <elbaro@github>"]
edition = "2018"
repository = "https://github.com/elbaro/project-euler"

[dependencies]
rayon = "1.3.0"
primal = "0.2.3"
indoc = "0.3.5"
num = "0.3.0"
num-bigint = "0.3.0"
num-traits = "0.2.12"
lazy_static = "1.4.0"
chrono = "0.4.11"
time = "0.2.16"
rand = "0.7.3"
reqwest = {vesrion="0.10.6", features=["blocking"]}
itertools = "0.9.0"
permutohedron = "0.2.4"
panic-context = "0.1.0"
sliding_windows = "3.0.0"
ordered-float = "1.0.2"
